--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "pg": "^8.8.0",
     "sequelize": "^6.28.0",
     "umzug": "^3.2.1",
-    "winston": "^3.8.2"
+    "winston": "^3.8.2",
+    "winston-loki": "^6.1.3"
   }
 }
