--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -47,12 +47,10 @@ jobs:
       - name: Create Sentry release
         uses: getsentry/action-release@v1
         env:
-          SENTRY_URL: https://toska.cs.helsinki.fi/
+          SENTRY_URL: ${{ secrets.SENTRY_URL }}
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_TOKEN }}
-          SENTRY_ORG: toska
+          SENTRY_ORG: ${{ secrets.SENTRY_ORG }}
           SENTRY_PROJECT: jami
         with:
           environment: production
           set_commits: 'skip'
-          sourcemaps: './build'
-          url_prefix: '~/opt/app-root/src/build/'
